xintong/backend/deploy/registry/registry-service.yml
kind: Service
apiVersion: v1
metadata:
  name: docker-registry
spec:
  ports:
    - port: 5000
      targetPort: 5000
  selector:
    app: docker-registry-app
